dropshot/tests/fail/bad_channel11.stderr
error[E0271]: expected `{async block@$DIR/tests/fail/bad_channel11.rs:9:1: 12:3}` to be a future that resolves to `Result<(), Box<dyn Error + Send + Sync>>`, but it resolves to `()`
  --> tests/fail/bad_channel11.rs:9:1
   |
9  | / #[channel {
10 | |     protocol = WEBSOCKETS,
11 | |     path = "/test",
12 | | }]
   | |__^ expected `Result<(), Box<...>>`, found `()`
   |
   = note:   expected enum `Result<(), Box<(dyn std::error::Error + Send + Sync + 'static)>>`
           found unit type `()`
note: required by a bound in `WebsocketUpgrade::handle`
  --> src/websocket.rs
   |
   |     pub fn handle<C, F>(mut self, handler: C) -> WebsocketEndpointResult
   |            ------ required by a bound in this associated function
...
   |         F: Future<Output = WebsocketChannelResult> + Send + 'static,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WebsocketUpgrade::handle`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)
